--- a/src/styles/_button.less
+++ b/src/styles/_button.less
@@ -8,3 +8,8 @@
     border-color: darken(@primary-color, 10%);
   }
 }
+.button-container {
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+}
