--- a/src/styles/_card.less
+++ b/src/styles/_card.less
@@ -24,7 +24,6 @@
   .ant-btn-primary {
     background-color: @primary-color !important;
     border-color: @primary-color !important;
-    left: 165px;
   }
 
   .ant-btn-danger {
@@ -81,6 +80,7 @@
   }
 
   .content {
+    margin-left: 0;
     padding: 10px;
   }
 
