Fix and Updates

--- a/src/styles/_card.less
+++ b/src/styles/_card.less
@@ -6,7 +6,7 @@
 
   &-head-title,
   .ant-form-item-label > label {
-    color: @primary-color !important;
+    color: @dark-background !important;
   }
 
   .ant-input-number,
