--- a/src/styles/_variables.less
+++ b/src/styles/_variables.less
@@ -1,6 +1,6 @@
-@primary-color: #1890ff;
-@secondary-color: #001529;
-@light-background: #A9A9A9;
-@dark-background: #001529;
+@primary-color: #c19bff;
+@secondary-color: #a784ed;
+@light-background: #8e6edb;
+@dark-background: #5a40b6;
 @header-height: 80px;
 @sidebar-width: 256px;
