--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -5,6 +5,6 @@
 @import "_card";
 @import "_login";
 @import "_animations";
-@import "_budgetExpense";
 @import "_categoryExpenseList";
 @import "_budget";
+@import "_budget-form";
