--- a/src/styles/_mixins.less
+++ b/src/styles/_mixins.less
@@ -1,6 +1,10 @@
 .center-content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+  gap: 12px;
+  min-height: 100%;
+  padding: 20px;
+}
