--- a/src/styles/_budget-form.less
+++ b/src/styles/_budget-form.less
@@ -25,4 +25,38 @@
       transform: scale(1.1);
     }
   }
+
+  // DARK MODE PARA BUDGET FORM
+  .dark-mode .budget-form {
+    background: #1f1f1f !important;
+    color: #fff;
+
+    .ant-form-item-label>label {
+      color: #fff !important;
+    }
+
+    .ant-input-number,
+    .ant-picker,
+    .ant-select-selector {
+      background-color: #2a2a2a !important;
+      color: #fff !important;
+      border-color: #444 !important;
+    }
+
+    .ant-input-number input,
+    .ant-picker input,
+    .ant-select-selection-item {
+      color: #fff !important;
+    }
+
+    .ant-input::placeholder,
+    .ant-picker input::placeholder,
+    .ant-select-selection-placeholder {
+      color: #aaa !important;
+    }
+
+    .ant-switch {
+      background-color: #555 !important;
+    }
+  }
 }
