--- a/src/styles/_variables.less
+++ b/src/styles/_variables.less
@@ -1,6 +1,6 @@
-@primary-color: #c19bff;
-@secondary-color: #a784ed;
-@light-background: #8e6edb;
-@dark-background: #5a40b6;
+@primary-color: #6366F1;
+@secondary-color: #4338CA;
+@light-background: #F1F5F9;
+@dark-background: #1E293B;
 @header-height: 80px;
 @sidebar-width: 256px;
