--- a/src/styles/_categoryExpenseList.less
+++ b/src/styles/_categoryExpenseList.less
@@ -40,6 +40,11 @@
   border-radius: 8px;
 }
 
+.category-goal-input {
+  width: 100%;
+  border-radius: 8px;
+}
+
 @media (max-width: 420px) {
   .category-panel {
     padding: 10px;
